# trustyai-tests

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality.yaml
model_data/data_batches/: 105.json  110.json  115.json  120.json  125.json  130.json  135.json  140.json  145.json  150.json  155.json  160.json  165.json  170.json  175.json  180.json  185.json  190.json  195.json  200.json  205.json  210.json  215.json  220.json  225.json  230.json  235.json  240.json  245.json  25.json  250.json  255.json  260.json  265.json  270.json  275.json  280.json  285.json  290.json  295.json  (+61 more)
model_data/demo-loan-nn-onnx-alpha/: 0.json  1000.json  1250.json  1500.json  250.json  750.json
model_data/gaussian-credit-model/data_batches/: 15.json  30.json  35.json  40.json  75.json  95.json
resources/: inference_service.py  serving_runtime.py  trustyai_service.py
resources/storage/: minio_pod.py  minio_secret.py  minio_service.py
tests/: conftest.py  test_bias.py  utils.py
tests/bias/: conftest.py  test_bias.py
tests/drift/: conftest.py  test_drift.py  utils.py
trustyai_tests/: data-collector.yaml
trustyai_tests/manifests/: dsc_template.yaml  mariadb-operator.yaml  mariadb.yaml
trustyai_tests/model_data/bank-churn/: inference_data.json
trustyai_tests/model_data/gaussian-credit-model/data_batches/: 10.json  100.json  20.json  50.json  55.json  60.json  65.json  70.json  (+3 more)
trustyai_tests/model_data/loan-nn-onnx/: 1750.json  2000.json  2250.json  500.json
trustyai_tests/resources/: inference_service.py  serving_runtime.py  trustyai_service.py
trustyai_tests/resources/storage/: minio_pod.py  minio_secret.py  minio_service.py
trustyai_tests/setup/: README.md  operators_config.yaml  setup_cluster.py
trustyai_tests/tests/: conftest.py  constants.py  metrics.py  minio.py  utils.py
trustyai_tests/tests/bias/: conftest.py  test_bias.py
trustyai_tests/tests/drift/: conftest.py  test_drift.py  utils.py
trustyai_tests/tests/fairness/: conftest.py  test_fairness.py  utils.py
trustyai_tests/tests/manifests/: mariadb-operator.yaml
trustyai_tests/tests/multiple_namespaces/: conftest.py  test_multiple_namespaces.py  utils.py
trustyai_tests/utilities/: constants.py
utilities/: constants.py
utils/: constants.py
(+2 files in other folders)
